--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Bahareh Sorouri"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Bahareh Sorouri"
-description              : "An amazing website."
+description              : #"An amazing website."
 url                      : "baharehsorouri.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "baharehsorouri.github.io"
@@ -104,15 +104,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Bahareh"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "NSF Postdoctoral Research Fellow"
   location         : "Somewhere"
   email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
+      #url: "mailto:bsorouri@alaska.edu"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -124,10 +124,10 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://github.com/baharehsorouri"
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
+       url: "https://www.linkedin.com/in/baharehsorouri/"
 
 # Site Footer
 footer:
